<resources>
    <string name="app_name">Othello</string>
    <string name="action_settings">Settings</string>


    <string name="titre">How to play?</string>
    <string name="btnCanel">Cancel</string>
    <string name="btnRefresh">Refresh</string>
    <string name="btnNew">New</string>
    <string name="btnLoad">Load</string>
    <string name="choisir">Choose level</string>
    <string name="newOrLoad">Do you wanna create a new game or load an old one?</string>

    <string name="labelWinner">Winner is N/A</string>




    <string name="texte1">Othello is played on an 8 x 8 board with 64 discs, black on 1 side and white on the other</string>
    <string name="texte2">Place 4 discs in the center of the board, 2 with the black side up and 2 with the white side up. </string>
    <string name="texte3">lack places a disc so that it and 1 of his starting discs flank a white disc (i.e. a white disc will be between
        two black discs).</string>
    <string name="texte4">Black flips the (flanked) white disc over so it is now black, and belongs to the Black player.</string>
    <string name="IA_prompt">Choose an IA level</string>
    <string-array name="IA_levels">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
        <item>Expert</item>
    </string-array>

</resources>
