<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titre"
                android:id="@+id/titre"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.28"
                android:textColor="#73ad48"
                android:textSize="25dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texte1"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.28"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/state1"
                android:layout_gravity="center" />
             <TextView
            android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/texte2"
                 android:id="@+id/textView2"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="0.28"
                 android:textStyle="bold"/>
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/state2"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texte3"
                android:id="@+id/textView3"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.28"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/state3"
                android:layout_gravity="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texte4"
                android:id="@+id/textView4"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.28"
                android:textStyle="bold"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>